// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /campaigns Campaigns_200 1`] = `
Object {
  "data": Array [
    Object {
      "createdAt": Any<String>,
      "description": "A description to test",
      "endAt": 20191012,
      "id": 1,
      "maxProposition": 2,
      "name": "test",
      "semester": "S5",
      "startAt": 0,
      "updatedAt": Any<String>,
    },
  ],
  "length": 1,
  "max": 1,
  "page": 1,
}
`;

exports[`GET /campaigns/:id Campaigns_200 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "maxProposition": 2,
  "name": "test",
  "propositions": Array [],
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`POST /campaigns ValidCampaigns_200 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": null,
  "updatedAt": Any<String>,
}
`;

exports[`PUT /campaigns/:id Campaigns_200_NotAnyDataUpdated 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`PUT /campaigns/:id Campaigns_200_UpdateAllData 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": Any<Number>,
  "maxProposition": 2,
  "name": "additional data",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;
